--- a/views/partials/hourtypes.html
+++ b/views/partials/hourtypes.html
@@ -70,7 +70,7 @@
       <div class="ts-flag-row" style="margin-top:16px;">
         <div class="ts-flag-meta">
           <div class="ts-flag-title">Use for hourly rate calculation</div>
-          <div class="ts-flag-desc">When enabled, this hour type's hours are used to calculate effective hourly rates in annual views and income breakdown.</div>
+          <div class="ts-flag-desc">When enabled, this hour type's hours contribute to calculating effective hourly rates in annual views and income breakdown. Multiple hour types can be selected to allow tracking of related work categories.</div>
         </div>
         <label class="ts-toggle">
           <input type="checkbox" id="hour-type-use-for-rate-calc" />
